--- a/index.html
+++ b/index.html
@@ -124,12 +124,10 @@
       
       <!-- ------------------------------------card-div--------------------------------------------- -->
       <div class="card-div">
+            <h2>MOST LOVED</h2>
+                <div class="card">
 
-          <h2>MOST LOVED</h2>
-
-          <div class="card">
-
-          <div class="img-card">
+                   <div class="img-card">
                  <div class="img">
                   <img src="./media/images/img6.webp">
                  </div>
@@ -198,25 +196,26 @@
       <div class="full">
         <div class="row">
           <div class="col-12">
-            <h3 class="text-center carousel-title">Trending Collections</h3>
+            <!-- <h3 class="text-center carousel-title">Trending Collections</h3> -->
           </div>
         </div>
         <!--slide-->
-        <div class="trend-images row">
-          <div>
-            <img src="./assets/j-images/5.jpg" alt="first-img" />
+        <h3 class="text-center carousel-title">Trending Collections</h3>
+         <div class="trend-images row"> 
+          <div  >
+            <img class="img-box" src="./assets/j-images/5.jpg" alt="first-img" />
           </div>
           <div>
-            <img src="./assets/j-images/6.jpeg" alt="first-img" />
+            <img class="img-box" src="./assets/j-images/6.jpeg" alt="first-img" />
           </div>
           <div>
-            <img src="./assets/j-images/7.jpeg" alt="first-img" />
+            <img class="img-box" src="./assets/j-images/7.jpeg" alt="first-img" />
           </div>
           <div>
-            <img src="./assets/j-images/8.jpeg" alt="first-img" />
+            <img class="img-box" src="./assets/j-images/8.jpeg" alt="first-img" />
           </div>
         </div>
-      </div>
+      </div> 
       <!-- banner -->
       <div class="banner">
       <div class="banner-text">
